--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Matthew</h1>
-				<p>I'm making this shit up as I go along.<a href="/about">Read more about my life...</a></p>
+				<p>I'm making this shit up as I go along.<br />
+				<a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
