--- a/index.html
+++ b/index.html
@@ -1,31 +1,10 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Matthew Hamilton M.</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
+---
+layout: default
+title: Matthew Hamilton M.
+---
     		<div class="blurb">
         		<h1>Hi there, I'm Matthew</h1>
 				<p>I'm making this shit up as I go along.<br />
 				<a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:matthewhamiltonm@gmail.com">email</a></li>
-        		<li><a href="https://github.com/FortinbrasXVI">github.com/FortinbrasXVI</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
