--- a/cv/index.html
+++ b/cv/index.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="Resume for Matthew H Miller, Web Developer"/>
 		<meta charset="UTF-8"> 
 
-		<link type="text/css" rel="stylesheet" href="style.css">
+		<link type="text/css" rel="stylesheet" href="cvstyle.css">
 	</head>
 
 	<body>
