--- a/index.html
+++ b/index.html
@@ -1,10 +1,28 @@
----
-layout: default
-title: Matthew Hamilton M.
----
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Matthew Miller, Ronin Developer</title>
+	</head>
+	<body>
+		<nav>
+    		<ul>
+        		<li><a href="/">Home</a></li>
+	        	<li><a href="/about">About</a></li>
+        		<li><a href="/cv">CV</a></li>
+        		<li><a href="/blog">Blog</a></li>
+    		</ul>
+		</nav>
+		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Matthew</h1>
-				<p>I'm making this shit up as I go along.<br />
-				<a href="/about">Read more about my life...</a></p>
+        		<h1>Hi there, I'm Matt Miller</h1>
+				<p>I'm game designer, writer, developer, actor, martial artist...I have too many hobbies.<a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
+		
+		<footer>
+    			<ul>
+               			<li><a href="https://github.com/hankquinlan">Demo Page link</a></li>
+			</ul>
+		</footer>
+	</body>
+</html>
