--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Matt Miller</h1>
-				<p>I'm game designer, writer, developer, actor, martial artist...I have too many hobbies.<a href="/about">Read more about my life...</a></p>
+				<p>I'm game designer, writer, developer, actor, martial artist...I have too many hobbies.<br />
+				<a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		
